[workspace]
members = ["utils", "tools", "core", "launch"]

[workspace.package]
authors = ["the rengine authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mysll/rengine"

[workspace.dependencies]
re_core = { path = "./core" }
re_utils = { path = "./utils" }
rand = "0.8.5"
tokio = { version = "=1.25.0", features = ["full"] }
tokio-util = "0.7.7"
tracing = "0.1.34"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
clap = { version = "4.1.8", features = ["derive"] }
bytes = "1.4.0"
