[package]
name = "re_core"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
re_utils.workspace = true
re_ops.workspace = true
re_object.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
bytes.workspace = true
inventory.workspace = true
