[package]
name = "launch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "launch"
path = "main.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
re_core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true