[package]
name = "re_ops"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn.workspace = true
bae.workspace = true
proc-macro2.workspace = true
quote.workspace = true
Inflector = { version = "0.11.4", default-features = false }
inventory.workspace = true
